--- a/SmarkPark/SmarkPark/Controller/Home/HomeViewController.xib
+++ b/SmarkPark/SmarkPark/Controller/Home/HomeViewController.xib
@@ -196,7 +196,7 @@
                         <constraint firstItem="hFW-1H-BvF" firstAttribute="centerX" secondItem="sOi-lq-Fxl" secondAttribute="centerX" id="xxQ-es-efC"/>
                     </constraints>
                 </view>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uR7-JK-blu">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uR7-JK-blu">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KvF-gA-lrb">
